[html/css] now CAS and LDAP conf are displayed separately.  New display without table. we must avoid using table juste for align display elements. here's an example of "table style" display with juste some css rules, that you can reuse in other page.
git-svn-id: https://subversion.renater.fr/wimsdev/trunk@5012 b48fb02d-6135-0410-b1dd-deb767c81da9

--- a/wims/public_html/gifs/themes/jalon/icon_orig.css
+++ b/wims/public_html/gifs/themes/jalon/icon_orig.css
@@ -5,7 +5,8 @@
 	line-height:24px;   /* here too */
 	padding-left:26px;  /* and here the width, plus a small space (1-2px)*/
 }
-#wimsmenubox .menuitem, .wimsmenu .topmenuitem {background-image:none;}
+.menuitem, #wimsmenubox .menuitem, .wimsmenu .topmenuitem, #wimsmenumodubox .menuitem 
+{background-image:none;}
 
 .SE_config{
 	background-image:url(SE_config.gif);
