--- a/wims/public_html/themes/standard/css.css
+++ b/wims/public_html/themes/standard/css.css
@@ -418,6 +418,20 @@ tt.wims_login {
 }
 /* external authentification (adm/class/reguser, adm/class/classes) */
 .wims_external_auth { padding:5px;}
+
+/*** Class Settings ***/
+.class_settings label{
+	min-width: 10em;
+	display: inline-block;
+}
+.class_settings li{
+	margin:0;
+	padding:2px 5px;
+}
+.class_settings li:nth-child(even) {background: #CCC}
+.class_settings li:nth-child(odd) {background: #FFF}
+
+
 /* END of Classes */
 
 /************************
@@ -1130,6 +1144,9 @@ table.wims_user_table {
 
 .spacer{
 	clear:both;
+}
+.separation{
+	margin:0.5em;
 }
 
 .wims_emph {font-style:italic ; color:#990000;}
